[project]
name = "atc-simulator"
version = "0.1.0"
description = "Single-airport ATC simulator (walking skeleton)"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5,<3.0",
    "pydantic>=2.13,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
atc-sim = "atc_sim.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
